# aush

./: .gitignore  README.md  aush.py  autoshell.py  justfile  pyproject.toml  pytest.ini  test_aush.py
aush/: __init__.py
