[tool.poetry]
name = "aush"
version = "0.9.11"
description = "Pythonic subprocess library"
readme = "README.md"
authors = ["Keith Devens"]
repository = "https://github.com/kbd/aush"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pudb = "^2024.1"
ptpython = "^3.0.27"
pytest = "^8.2.2"
mypy = "^1.10.1"
ruff = "^0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
