[project]
name = "aush"
version = "0.9.12"
description = "Pythonic subprocess library"
readme = "README.md"
authors = [
    { name = "Keith Devens", email = "keith@keithdevens.com" }
]
repository = "https://github.com/kbd/aush"
license = "MIT"
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "mypy>=1.14.1",
    "ptpython>=3.0.29",
    "pudb>=2024.1.3",
    "pytest>=8.3.4",
]
